waybar fix pulseaudio spacing

--- a/config/waybar/waybar.css
+++ b/config/waybar/waybar.css
@@ -21,9 +21,9 @@ window#waybar {
 #disk,
 #network,
 #bluetooth,
-#pulseaudio,
+#pulseaudio#input,
+#pulseaudio#output,
 #tray,
-#pulseaudio#microphone,
 #custom-spotify,
 #custom-power,
 #custom-clock,
